--- a/package.json
+++ b/package.json
@@ -1,8 +1,40 @@
 {
-  "name": "file-ext-filtering",
-  "version": "1.0.0",
-  "main": "index.js",
-  "repository": "https://github.com/SoyaNyan/file-ext-filtering.git",
-  "author": "SoyaNyan <nyan@soya.moe>",
-  "license": "MIT"
+	"name": "file-ext-filtering",
+	"version": "1.0.0",
+	"main": "app.ts",
+	"repository": "https://github.com/SoyaNyan/file-ext-filtering.git",
+	"scripts": {
+		"build": "tsc -p . && copy src\\config\\.env dist\\src\\config\\.env",
+		"start": "pm2 start ecosystem.config.js",
+		"start:dev": "tsc-watch --onSuccess \"ts-node dist/src/app.js\"",
+		"swagger-autogen": "node ./swagger/swagger.js",
+		"swagger-themes:build": "cd ./node_modules/swagger-themes && tsc",
+		"create-table": "ts-node dist/src/migration/extMigration.js",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"author": "SoyaNyan <nyan@soya.moe>",
+	"license": "MIT",
+	"dependencies": {
+		"cors": "^2.8.5",
+		"dotenv": "^16.0.2",
+		"express": "^4.18.1",
+		"mariadb": "^3.0.2",
+		"sequelize": "^6.28.0",
+		"winston": "^3.8.2",
+		"winston-daily-rotate-file": "^4.7.1",
+		"zod": "^3.20.2"
+	},
+	"devDependencies": {
+		"@types/cors": "^2.8.12",
+		"@types/express": "^4.17.13",
+		"@types/node": "^18.7.17",
+		"@types/swagger-ui-express": "^4.1.3",
+		"nodemon": "^2.0.19",
+		"swagger-autogen": "^2.21.6",
+		"swagger-themes": "^1.2.22",
+		"swagger-ui-express": "^4.5.0",
+		"ts-node": "^10.9.1",
+		"tsc-watch": "^5.0.3",
+		"typescript": "^4.8.3"
+	}
 }
