--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "pm2 serve dist 3777",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
