--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"express": "^4.18.1",
 		"mariadb": "^3.0.2",
 		"sequelize": "^6.28.0",
+		"socket.io": "^4.5.4",
 		"winston": "^3.8.2",
 		"winston-daily-rotate-file": "^4.7.1",
 		"zod": "^3.20.2"
